add vim auto-comment plugin

--- a/.vimrc.1
+++ b/.vimrc.1
@@ -16,6 +16,7 @@ Plugin 'tmsvg/pear-tree'
 Plugin 'fatih/vim-go'
 Plugin 'vim-airline/vim-airline'
 Plugin 'vim-airline/vim-airline-themes'
+Plugin 'tpope/vim-commentary'
 
 " The following are examples of different formats supported.
 " Keep Plugin commands between vundle#begin/end.
