--- a/.vimrc.1
+++ b/.vimrc.1
@@ -20,6 +20,7 @@ Plugin 'tpope/vim-commentary'
 Plugin 'kana/vim-textobj-entire'
 Plugin 'kana/vim-textobj-user'
 Plugin 'preservim/nerdtree'
+Plugin 'tpope/vim-unimpaired'
 
 " The following are examples of different formats supported.
 " Keep Plugin commands between vundle#begin/end.
