--- a/.vimrc.1
+++ b/.vimrc.1
@@ -21,6 +21,7 @@ Plugin 'kana/vim-textobj-entire'
 Plugin 'kana/vim-textobj-user'
 Plugin 'preservim/nerdtree'
 Plugin 'tpope/vim-unimpaired'
+Plugin 'bling/vim-bufferline'
 
 " The following are examples of different formats supported.
 " Keep Plugin commands between vundle#begin/end.
